--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -1,13 +1,43 @@
 {
   "nav": {
-    "home": "الرئيسية",
-    "about": "من نحن",
+    "works": "أعمالنا",
+    "blog": "المدونة",
     "services": "خدماتنا",
-    "contact": "اتصل بنا"
+    "about": "من نحن",
+    "cta": "تواصل معنا"
   },
   "common": {
-    "readMore": "اقرأ المزيد",
-    "contactUs": "اتصل بنا",
-    "learnMore": "اعرف المزيد"
+    "languageName": "العربية",
+    "switchToEnglish": "English"
+  },
+  "hero": {
+    "mainHeading": {
+      "part1": "طور حضورك الرقمي مع",
+      "part2": "مواقع عالية التحويل"
+    },
+    "subtitle": "نصمم مواقع سريعة ومحسنة لمحركات البحث لا تتميز فقط بمظهرها الرائع - بل تحقق نتائج أعمال حقيقية وتدعم نموك",
+    "cta": {
+      "primary": "احصل على عرض سعر مجاني",
+      "secondary": "تصفح أعمالنا"
+    },
+    "features": {
+      "seo": {
+        "title": "تحسين محركات البحث",
+        "description": "عزز ظهورك على الإنترنت مع حلولنا المحسنة لمحركات البحث"
+      },
+      "speed": {
+        "title": "سرعة فائقة",
+        "description": "استمتع بأداء وسرعة تحميل عالية"
+      },
+      "customization": {
+        "title": "قابل للتخصيص بالكامل",
+        "description": "خصص كل جانب ليتناسب مع علامتك التجارية بشكل مثالي"
+      },
+      "multilingual": {
+        "title": "دعم متعدد اللغات",
+        "description": "الوصول إلى جمهور عالمي مع إمكانيات متعددة اللغات"
+      }
+    },
+    "trust": "موثوق به من قبل رواد الأعمال والشركات الناشئة حول العالم"
   }
 }
