feat: Add Arabic translations and RTL support
- Added Arabic translations for all components
- Implemented RTL layout support
- Fixed project translations and content display
- Updated types and utils for better i18n support

--- a/src/i18n/translations/ar/hero.json
+++ b/src/i18n/translations/ar/hero.json
@@ -26,5 +26,43 @@
       "description": "الوصول إلى جمهور عالمي مع إمكانيات متعددة اللغات"
     }
   },
-  "trust": "موثوق به من قبل رواد الأعمال والشركات الناشئة حول العالم"
+  "trust": "موثوق به من قبل رواد الأعمال والشركات الناشئة حول العالم",
+  "verticalTabs": {
+    "title": "نحن نبني تجارب رقمية مذهلة",
+    "subtitle": "نحن نجمع بين التصميم والتكنولوجيا لإنشاء منتجات رقمية مبتكرة",
+    "cta": "ابدأ مشروعك",
+    "tabs": {
+      "datadriven": "تصميم مدفوع بالبيانات",
+      "seamless": "تجربة سلسة",
+      "custom": "حلول مخصصة",
+      "multilanguage": "دعم متعدد اللغات"
+    },
+    "tabContent": {
+      "datadriven": "نستخدم البيانات والتحليلات لتوجيه قراراتنا في التصميم وتحسين تجربة المستخدم",
+      "seamless": "نقدم تجربة سلسة عبر جميع الأجهزة والمنصات",
+      "custom": "نطور حلولاً مخصصة تلبي احتياجاتك الفريدة",
+      "multilanguage": "نوفر دعماً كاملاً للغات المتعددة، بما في ذلك اللغة العربية"
+    }
+  },
+  "verticalTab": {
+    "title": "ما يميزنا",
+    "description": "في فيب لابز، نحن لا نبني مواقع ويب فحسب - بل نقدم حلولاً مصممة لمساعدة عملك على الازدهار. إليك ما يميزنا.",
+    "tabs": {
+      "datadriven": "تصميم مدفوع بالبيانات",
+      "seamless": "تجربة سلسة",
+      "custom": "حلول مخصصة",
+      "multilanguage": "دعم متعدد اللغات"
+    },
+    "tabContent": {
+      "datadriven": "نمزج الإبداع مع التحليلات لإنشاء مواقع ويب لا تبدو مذهلة فحسب، بل تؤدي بشكل استثنائي. كل قرار تصميم مدعوم ببيانات سلوك المستخدم وأفضل الممارسات في الصناعة.",
+      "datadrivenWhy": "التصميم المدفوع بالبيانات يضمن أن موقعك لا يجذب الانتباه فحسب، بل يحول الزوار إلى عملاء بفعالية.",
+      "seamless": "نحن نعطي الأولوية للتنقل البديهي وأوقات التحميل السريعة والتصميمات المتجاوبة لتقديم تجربة استثنائية عبر الأجهزة. يبقى الزوار لفترة أطول ويستكشفون بعمق ويثقون بعلامتك التجارية.",
+      "seamlessWhy": "تجربة المستخدم السلسة تبني الثقة والمصداقية، مما يقلل معدلات الارتداد ويزيد من معدلات التحويل لعملك.",
+      "custom": "نأخذ الوقت الكافي لفهم أهداف عملك الفريدة وصناعتك وجمهورك المستهدف. كل موقع ويب نقوم بإنشائه مصمم خصيصاً ليعكس علامتك التجارية ويدفع النمو القابل للقياس.",
+      "customWhy": "الحلول المخصصة تضمن أن موقعك يتوافق تماماً مع هوية علامتك التجارية ويساعد في تحقيق أهداف عملك.",
+      "multilanguage": "الوصول إلى جمهور عالمي بسهولة من خلال مواقع الويب التي تدعم لغات متعددة. نقوم بتنفيذ تبديل سلس للغة، مما يضمن شعور كل زائر بأنه في المنزل.",
+      "multilanguageWhy": "توسيع نطاق وصول موقعك من خلال دعم اللغات المتعددة يعزز مشاركة المستخدم ويبني الثقة عبر الأسواق المتنوعة."
+    },
+    "whyItMatters": "لماذا هذا مهم: "
+  }
 }
