--- a/src/i18n/translations/en/hero.json
+++ b/src/i18n/translations/en/hero.json
@@ -1,30 +1,51 @@
 {
   "mainHeading": {
-    "part1": "Transform Your Online Presence with",
-    "part2": "High-Converting Websites"
+    "part1": "We Build Amazing",
+    "part2": "Digital Experiences"
   },
-  "subtitle": "We craft SEO-optimized, lightning-fast websites that don't just look stunning—they drive real business results and fuel your growth",
+  "subtitle": "We combine design and technology to create innovative digital products",
   "cta": {
-    "primary": "Get Your Free Quote",
-    "secondary": "View Our Work"
+    "primary": "Start Your Project",
+    "secondary": "Learn More"
   },
   "features": {
     "seo": {
-      "title": "SEO-Optimized Designs",
-      "description": "Boost your online visibility with our SEO-friendly solutions"
+      "title": "SEO Optimized",
+      "description": "Rank higher in search results"
     },
     "speed": {
       "title": "Lightning Fast",
-      "description": "Experience blazing-fast performance and loading times"
+      "description": "Blazing fast load times"
     },
     "customization": {
       "title": "Fully Customizable",
-      "description": "Tailor every aspect to match your brand perfectly"
+      "description": "Tailored to your needs"
     },
     "multilingual": {
-      "title": "Multi-Language Support",
-      "description": "Reach global audiences with multi-language capabilities"
+      "title": "Multi-Language",
+      "description": "Reach global audiences with multilingual capabilities"
     }
   },
-  "trust": "Trusted by Visionary Founders and Entrepreneurs Worldwide"
+  "trust": "Trusted by entrepreneurs and startups worldwide",
+  "verticalTab": {
+    "title": "What Makes Us Stand Out",
+    "description": "At vebLabs, we don't just build websites — we deliver solutions designed to help your business thrive. Here's what sets us apart.",
+    "tabs": {
+      "datadriven": "Data-Driven Design",
+      "seamless": "Seamless Experience",
+      "custom": "Custom Solutions",
+      "multilanguage": "Multi-Language Support"
+    },
+    "tabContent": {
+      "datadriven": "We blend creativity with analytics to create websites that not only look stunning but perform exceptionally well. Every design decision is backed by user behavior data and industry best practices.",
+      "datadrivenWhy": "Data-driven design ensures your website not only captures attention but converts visitors into customers effectively.",
+      "seamless": "We prioritize intuitive navigation, fast loading times, and responsive designs to deliver an exceptional experience across devices. Visitors stay longer, explore deeper, and trust your brand.",
+      "seamlessWhy": "A seamless UX builds trust and credibility, reducing bounce rates and increasing conversions for your business.",
+      "custom": "We take the time to understand your unique business goals, industry, and target audience. Every website we create is tailored to reflect your brand and drive measurable growth.",
+      "customWhy": "Custom solutions ensure that your website aligns perfectly with your brand identity and helps achieve your business objectives.",
+      "multilanguage": "Reach a global audience with ease through websites that support multiple languages. We implement seamless language switching, ensuring every visitor feels at home.",
+      "multilanguageWhy": "Expanding your website's reach with multi-language support enhances user engagement and builds trust across diverse markets."
+    },
+    "whyItMatters": "Why It Matters: "
+  }
 }
