--- a/src/i18n/translations/ar/contact.json
+++ b/src/i18n/translations/ar/contact.json
@@ -1,24 +1,35 @@
 {
   "meta": {
-    "title": "تواصل معنا - فيبلابس",
-    "description": "تواصل مع فيبلابس للحصول على خدمات تصميم وتطوير الويب المهنية. دعنا نناقش مشروعك ونبتكر شيئًا مذهلاً معًا."
+    "title": "تواصل معنا | فيبلابس",
+    "description": "تواصل مع فيبلابس للحصول على خدمات تطوير الويب والتصميم والحلول الرقمية المتخصصة. نحن هنا لمساعدتك في تحقيق رؤيتك."
   },
   "hero": {
-    "title": "تواصل معنا",
-    "description": "هل لديك مشروع في ذهنك؟ دعنا نناقش كيف يمكننا المساعدة في تحقيق رؤيتك."
+    "title": "دعنا نبني شيئاً مذهلاً معاً",
+    "description": "هل لديك مشروع في ذهنك؟ نود أن نسمع عنه. أخبرنا عما تبحث عنه وسنساعدك في تحقيقه."
   },
   "benefits": {
-    "support": {
-      "title": "دعم على مدار الساعة",
-      "description": "فريقنا المتخصص جاهز دائمًا لمساعدتك."
-    },
     "response": {
-      "title": "استجابة سريعة",
-      "description": "احصل على الردود خلال 24 ساعة في أيام العمل."
+      "title": "سرعة الاستجابة",
+      "description": "نرد على جميع الاستفسارات خلال 24 ساعة. نحن نقدر وقتك ونحترمه."
+    },
+    "support": {
+      "title": "دعم مخصص",
+      "description": "احصل على اهتمام شخصي من فريقنا المتخصص طوال رحلة مشروعك."
     },
     "team": {
-      "title": "فريق خبير",
-      "description": "اعمل مع محترفينا ذوي الخبرة."
+      "title": "فريق متخصص",
+      "description": "اعمل مع محترفين مهرة يجلبون سنوات من الخبرة إلى مشروعك."
     }
+  },
+  "form": {
+    "title": "ابدأ مشروعك",
+    "description": "املأ النموذج أدناه وسنرد عليك خلال 24 ساعة.",
+    "name": "الاسم",
+    "email": "البريد الإلكتروني",
+    "message": "الرسالة",
+    "submit": "إرسال الرسالة",
+    "success": "شكراً لرسالتك! سنرد عليك قريباً.",
+    "error": "حدث خطأ في إرسال رسالتك. يرجى المحاولة مرة أخرى.",
+    "thankYou": "شكراً لرسالتك!"
   }
 }
