--- a/src/i18n/translations/ar/hero.json
+++ b/src/i18n/translations/ar/hero.json
@@ -1,9 +1,9 @@
 {
   "mainHeading": {
-    "part1": "طور حضورك الرقمي مع",
-    "part2": "مواقع عالية التحويل"
+    "part1": "عزز عائد استثمارك الرقمي",
+    "part2": "مع حلول ويب ذكية"
   },
-  "subtitle": "نصمم مواقع سريعة ومحسنة لمحركات البحث لا تتميز فقط بمظهرها الرائع - بل تحقق نتائج أعمال حقيقية وتدعم نموك",
+  "subtitle": "نبني مواقع إلكترونية تزيد من التفاعل وتحسن تجربة المستخدم وتدفع نمو الأعمال—لمساعدتك في تحقيق نجاح حقيقي ومؤثر على الإنترنت",
   "cta": {
     "primary": "احصل على عرض سعر مجاني",
     "secondary": "تصفح أعمالنا"
