--- a/src/i18n/translations/ar/ourwork.json
+++ b/src/i18n/translations/ar/ourwork.json
@@ -1,6 +1,7 @@
 {
   "badge": "معرض أعمالنا",
   "title": "المشاريع المميزة",
-  "description": "استكشف مجموعة متنوعة من مشاريعنا الناجحة التي تعرض خبرتنا في إنشاء حلول رقمية مؤثرة.",
-  "viewProject": "عرض المشروع"
+  "description": "استكشف محفظتنا المتنوعة من المشاريع الناجحة التي تعرض خبرتنا في إنشاء حلول رقمية مؤثرة.",
+  "viewProject": "عرض المشروع",
+  "all_projects": "جميع المشاريع"
 }
