--- a/src/i18n/translations/en/hero.json
+++ b/src/i18n/translations/en/hero.json
@@ -1,9 +1,9 @@
 {
   "mainHeading": {
-    "part1": "We Build Amazing",
-    "part2": "Digital Experiences"
+    "part1": "Maximize Your Digital ROI",
+    "part2": "with Intelligent Web Solutions"
   },
-  "subtitle": "We combine design and technology to create innovative digital products",
+  "subtitle": "We build websites that increase engagement, enhance user experience, and drive business growth—helping you achieve real, impactful success online",
   "cta": {
     "primary": "Start Your Project",
     "secondary": "Learn More"
