--- a/src/i18n/translations/en/ourwork.json
+++ b/src/i18n/translations/en/ourwork.json
@@ -2,5 +2,6 @@
   "badge": "Our Portfolio",
   "title": "Featured Projects",
   "description": "Explore our diverse portfolio of successful projects that showcase our expertise in creating impactful digital solutions.",
-  "viewProject": "View Project"
+  "viewProject": "View Project",
+  "all_projects": "All Projects"
 }
