--- a/src/i18n/translations/ar/footer.json
+++ b/src/i18n/translations/ar/footer.json
@@ -36,8 +36,7 @@
     "links": [
       { "name": "أعمالنا", "url": "/works" },
       { "name": "خدماتنا", "url": "/services" },
-      { "name": "المدونة", "url": "/blog" },
-      { "name": "من نحن", "url": "/about" }
+      { "name": "المدونة", "url": "/blog" }
     ]
   },
   "services": {
@@ -49,10 +48,10 @@
       "التسويق الرقمي"
     ]
   },
+  "copyright": "جميع الحقوق محفوظة.",
   "address": {
     "title": "الموقع",
-    "line1": "دبي ديجيتال بارك، واحة دبي للسيليكون",
+    "line1": "واحة دبي للسيليكون",
     "line2": "دبي، الإمارات العربية المتحدة"
-  },
-  "copyright": "جميع الحقوق محفوظة."
+  }
 }
