--- a/src/i18n/translations/ar/hero.json
+++ b/src/i18n/translations/ar/hero.json
@@ -64,5 +64,59 @@
       "multilanguageWhy": "توسيع نطاق وصول موقعك من خلال دعم اللغات المتعددة يعزز مشاركة المستخدم ويبني الثقة عبر الأسواق المتنوعة."
     },
     "whyItMatters": "لماذا هذا مهم: "
+  },
+  "services": {
+    "heading": "مواقع حديثة تعمل أثناء نومك",
+    "description": "نقوم ببناء مواقع سريعة ومحسنة لمحركات البحث يحبها جوجل. على عكس الوكالات التقليدية العالقة بالتقنيات القديمة، تصميماتنا المتوافقة مع الأجهزة المحمولة مصممة للأداء وتحقيق الإيرادات على مدار الساعة. نجاحك يعمل تلقائياً.",
+    "startProject": "ابدأ مشروعك",
+    "viewWork": "شاهد أعمالنا"
+  },
+  "pricing": {
+    "title": "أسعار بسيطة وشفافة",
+    "subtitle": "اختر الخطة المثالية لاحتياجات عملك",
+    "basic": {
+      "name": "أساسي",
+      "price": "٤,٩٩٩ درهم",
+      "usdPrice": "١,٣٦٠ دولار",
+      "description": "مثالي للشركات الصغيرة التي تبدأ رحلتها الرقمية",
+      "features": [
+        "موقع إلكتروني حديث ومتجاوب",
+        "تحسين محركات البحث",
+        "٥ صفحات",
+        "نموذج اتصال",
+        "تكامل وسائل التواصل الاجتماعي",
+        "دعم لمدة ٣ أشهر"
+      ]
+    },
+    "professional": {
+      "name": "احترافي",
+      "price": "٩,٩٩٩ درهم",
+      "usdPrice": "٢,٧٢٠ دولار",
+      "description": "مثالي للشركات النامية التي تحتاج إلى المزيد من الميزات",
+      "features": [
+        "كل ما في الباقة الأساسية",
+        "تصميم مخصص",
+        "١٠ صفحات",
+        "تكامل المدونة",
+        "إعداد التحليلات",
+        "دعم لمدة ٦ أشهر",
+        "تحسين الأداء"
+      ]
+    },
+    "enterprise": {
+      "name": "مؤسسات",
+      "price": "اتصل بنا",
+      "description": "حلول مخصصة للمؤسسات الكبيرة",
+      "features": [
+        "كل ما في الباقة الاحترافية",
+        "ميزات مخصصة",
+        "صفحات غير محدودة",
+        "أمان متقدم",
+        "دعم ذو أولوية",
+        "تكاملات مخصصة",
+        "جلسات تدريبية"
+      ]
+    },
+    "cta": "ابدأ الآن"
   }
 }
