--- a/src/i18n/translations/ar/services.json
+++ b/src/i18n/translations/ar/services.json
@@ -17,26 +17,64 @@
       "description": "إنشاء تجارب مستخدم بديهية وجذابة من خلال حلول تصميم قائمة على البحث.",
       "features": ["بحث المستخدم", "تصميم الواجهة", "أنظمة التصميم", "النماذج التفاعلية"]
     },
-    "ecommerce": {
-      "title": "حلول التجارة الإلكترونية",
-      "description": "بناء متاجر إلكترونية آمنة وقابلة للتطوير تعزز التحويلات وتحسن تجربة العملاء.",
-      "features": ["تجارة إلكترونية مخصصة", "تكامل المدفوعات", "إدارة المخزون", "لوحة التحليلات"]
-    },
     "marketing": {
       "title": "التسويق الرقمي",
       "description": "استراتيجيات تسويق رقمي قائمة على البيانات لتعزيز تواجدك على الإنترنت ودفع النمو.",
       "features": ["تحسين محركات البحث", "استراتيجية المحتوى", "وسائل التواصل الاجتماعي", "تحليلات الأداء"]
     },
-    "cloud": {
-      "title": "الحلول السحابية",
-      "description": "البنية التحتية والخدمات السحابية القابلة للتطوير لتمكين تحولك الرقمي.",
-      "features": ["الهندسة السحابية", "DevOps", "الخدمات بدون خادم", "الخدمات المصغرة"]
-    },
     "support": {
       "title": "الصيانة والدعم",
-      "description": "خدمات صيانة ودعم شاملة للحفاظ على أنظمتك تعمل بسلاسة.",
-      "features": ["دعم 24/7", "تحديثات الأمان", "مراقبة الأداء", "حلول النسخ الاحتياطي"]
+      "description": "خدمات صيانة شاملة للحفاظ على أصولك الرقمية في أفضل حالاتها.",
+      "features": ["دعم على مدار الساعة", "مراقبة الأداء", "تحديثات الأمان", "نسخ احتياطي منتظم"]
     }
+  },
+  "pricing": {
+    "title": "أسعار بسيطة وشفافة",
+    "subtitle": "اختر الخطة المثالية لاحتياجات عملك",
+    "basic": {
+      "name": "أساسي",
+      "price": "4,999 درهم",
+      "usdPrice": "1,360 دولار",
+      "description": "مثالي للشركات الصغيرة التي تبدأ رحلتها الرقمية",
+      "features": [
+        "موقع ويب حديث ومتجاوب",
+        "تحسين محركات البحث",
+        "5 صفحات",
+        "نموذج اتصال",
+        "تكامل وسائل التواصل الاجتماعي",
+        "دعم لمدة 3 أشهر"
+      ]
+    },
+    "professional": {
+      "name": "احترافي",
+      "price": "9,999 درهم",
+      "usdPrice": "2,720 دولار",
+      "description": "مثالي للشركات النامية التي تحتاج إلى المزيد من الميزات",
+      "features": [
+        "كل شيء في الباقة الأساسية",
+        "تصميم مخصص",
+        "10 صفحات",
+        "دمج المدونة",
+        "إعداد التحليلات",
+        "دعم لمدة 6 أشهر",
+        "تحسين الأداء"
+      ]
+    },
+    "enterprise": {
+      "name": "المؤسسات",
+      "price": "اتصل بنا",
+      "description": "حلول مخصصة للمؤسسات الكبيرة",
+      "features": [
+        "كل شيء في الباقة الاحترافية",
+        "ميزات مخصصة",
+        "صفحات غير محدودة",
+        "أمان متقدم",
+        "دعم ذو أولوية",
+        "تكاملات مخصصة",
+        "جلسات تدريبية"
+      ]
+    },
+    "cta": "ابدأ الآن"
   },
   "whyChooseUs": {
     "title": "لماذا تختار فيب لابز؟"
