--- a/src/i18n/translations/ar/testimonial.json
+++ b/src/i18n/translations/ar/testimonial.json
@@ -1,5 +1,6 @@
 {
   "badge": "آراء العملاء",
   "title": "ماذا يقول عملاؤنا",
-  "description": "لا تأخذ كلمتنا فقط. إليك ما يقوله عملاؤنا الرائعون عن تجربتهم في العمل معنا."
+  "description": "لا تأخذ كلمتنا فقط. إليك ما يقوله عملاؤنا المذهلون عن تجربتهم في العمل معنا.",
+  "cta": "ابدأ مشروعك"
 }
