--- a/src/i18n/translations/en/comparison.json
+++ b/src/i18n/translations/en/comparison.json
@@ -16,5 +16,6 @@
     "cuttingEdgeTools": "Cutting-Edge Tools",
     "scalableServices": "Scalable Services",
     "regionalKnowledge": "Regional Knowledge"
-  }
+  },
+  "cta": "Get a Free Consultation"
 }
