--- a/src/i18n/translations/en/testimonial.json
+++ b/src/i18n/translations/en/testimonial.json
@@ -1,5 +1,6 @@
 {
   "badge": "Client Testimonials",
   "title": "What Our Clients Say",
-  "description": "Don't just take our word for it. Here's what our amazing clients have to say about their experience working with us."
+  "description": "Don't just take our word for it. Here's what our amazing clients have to say about their experience working with us.",
+  "cta": "Start Your Project"
 }
