fix: update logo image path and size in mobile nav
- Changed logo image from PNG to WebP format
- Adjusted logo size to h-4 in mobile navigation

--- a/src/i18n/translations/ar/common.json
+++ b/src/i18n/translations/ar/common.json
@@ -1,6 +1,7 @@
 {
   "languageName": "العربية",
   "switchToEnglish": "English",
+  "closeMenu": "إغلاق القائمة",
   "languageNotice": {
     "title": "ملاحظة",
     "message": "هذا المحتوى متوفر باللغة الإنجليزية فقط لشرح أفضل لتفاصيل المشروع والخدمات"
