fix: implement proper 301 redirects and remove meta refresh tags

--- a/src/i18n/translations/ar/common.json
+++ b/src/i18n/translations/ar/common.json
@@ -9,5 +9,39 @@
   "ctaBanner": {
     "title": "هل أنت مستعد لبناء موقعك الإلكتروني؟",
     "description": "احصل على موقع احترافي من فريقنا المتخصص. دعنا نحول رؤيتك إلى واقع"
+  },
+  "meta": {
+    "home": {
+      "title": "فيب لابز - خدمات تطوير الويب والحلول الرقمية في دبي",
+      "description": "قم بتحويل تواجدك الرقمي مع خبراء فيب لابز في تطوير الويب وتصميم واجهات المستخدم والحلول الرقمية. مقرنا في دبي، نخدم عالمياً."
+    },
+    "services": {
+      "title": "خدمات تطوير الويب والخدمات الرقمية | فيب لابز دبي",
+      "description": "اكتشف مجموعتنا الشاملة من حلول تطوير الويب والتحول الرقمي والبرمجيات. من التطوير المخصص إلى حلول السحابة."
+    },
+    "works": {
+      "title": "معرض الأعمال ودراسات الحالة - مشاريع تطوير الويب | فيب لابز",
+      "description": "استكشف مشاريعنا الناجحة في تطوير الويب والتحول الرقمي. شاهد كيف ساعدنا الشركات في تحقيق أهدافها الرقمية."
+    },
+    "blog": {
+      "title": "رؤى رقمية ومدونة تطوير الويب | فيب لابز",
+      "description": "ابق على اطلاع بأحدث الرؤى في تطوير الويب والاتجاهات الرقمية وابتكارات التكنولوجيا. مقالات وأدلة من فريق خبرائنا."
+    },
+    "contact": {
+      "title": "اتصل بفيب لابز | استشارة تطوير الويب",
+      "description": "تواصل مع فيب لابز لاحتياجات تطوير الويب والحلول الرقمية. احجز استشارة مجانية لمناقشة مشروعك."
+    },
+    "get-in-touch": {
+      "title": "احجز استشارة مجانية | فيب لابز دبي",
+      "description": "احجز استشارة مجانية مع خبراء تطوير الويب في فيب لابز. دعنا نناقش متطلبات مشروعك وأهدافك الرقمية."
+    },
+    "sitemap": {
+      "title": "خريطة الموقع - دليل تصفح موقع فيب لابز",
+      "description": "تصفح هيكل موقع فيب لابز. اعثر على جميع خدماتنا، معرض أعمالنا، مقالات المدونة، ومواردنا في مكان واحد."
+    },
+    "accessibility": {
+      "title": "بيان إمكانية الوصول | موقع فيب لابز",
+      "description": "تعرف على التزام فيب لابز بإمكانية الوصول للويب. إرشاداتنا وتدابيرنا لضمان تجارب رقمية شاملة."
+    }
   }
 }
