fix: remove broken links and improve URL handling
- Remove privacy-policy, terms, and sitemap pages
- Update footer links to use consistent URL format
- Configure Astro to handle URLs without trailing slashes
- Update sitemap generation for better SEO
- Fix duplicate title tags in contact pages

--- a/src/i18n/translations/ar/footer.json
+++ b/src/i18n/translations/ar/footer.json
@@ -2,7 +2,7 @@
   "companyDescription": "نحول الأفكار إلى تجارب رقمية استثنائية. نصمم حلولاً مبتكرة تدفع نمو الأعمال.",
   "contact": {
     "title": "اتصل بنا",
-    "readyToStart": "هل أنت مستعد لبدء مشروعك التالي؟",
+    "readyToStart": "مستعد لبدء مشروعك القادم؟",
     "benefits": {
       "consultation": "استشارة أولية مجانية",
       "response": "وقت استجابة سريع",
@@ -27,16 +27,18 @@
     ],
     "businessHours": {
       "title": "ساعات العمل",
-      "weekdays": "الاثنين - الخميس: ٩:٠٠ ص - ٩:٠٠ م",
-      "weekend": "الجمعة - الأحد: ٩:٠٠ ص - ٥:٠٠ م"
+      "weekdays": "الاثنين-الخميس: 9:00 صباحاً - 9:00 مساءً",
+      "weekend": "الجمعة-الأحد: 9:00 صباحاً - 5:00 مساءً"
     }
   },
   "quickLinks": {
     "title": "روابط سريعة",
     "links": [
-      { "name": "أعمالنا", "url": "/works" },
-      { "name": "خدماتنا", "url": "/services" },
-      { "name": "المدونة", "url": "/blog" }
+      { "name": "الرئيسية", "url": "" },
+      { "name": "أعمالنا", "url": "works" },
+      { "name": "خدماتنا", "url": "services" },
+      { "name": "المدونة", "url": "blog" },
+      { "name": "اتصل بنا", "url": "contact" }
     ]
   },
   "services": {
@@ -48,10 +50,5 @@
       "التسويق الرقمي"
     ]
   },
-  "copyright": "جميع الحقوق محفوظة.",
-  "address": {
-    "title": "الموقع",
-    "line1": "واحة دبي للسيليكون",
-    "line2": "دبي، الإمارات العربية المتحدة"
-  }
+  "copyright": "جميع الحقوق محفوظة."
 }
