--- a/src/i18n/translations/en/footer.json
+++ b/src/i18n/translations/en/footer.json
@@ -34,9 +34,11 @@
   "quickLinks": {
     "title": "Quick Links",
     "links": [
-      { "name": "Our Works", "url": "/works" },
-      { "name": "Services", "url": "/services" },
-      { "name": "Blog", "url": "/blog" }
+      { "name": "Home", "url": "" },
+      { "name": "Our Works", "url": "works" },
+      { "name": "Services", "url": "services" },
+      { "name": "Blog", "url": "blog" },
+      { "name": "Contact", "url": "contact" }
     ]
   },
   "services": {
@@ -48,10 +50,5 @@
       "Digital Marketing"
     ]
   },
-  "copyright": "All rights reserved.",
-  "address": {
-    "title": "Location",
-    "line1": "Dubai Digital Park, Dubai Silicon Oasis",
-    "line2": "Dubai, United Arab Emirates"
-  }
+  "copyright": "All rights reserved."
 }
