fix: improve 404 handling and add custom 404 page
- Add custom 404 page with multilingual support
- Update middleware to handle 404s more gracefully
- Add more redirects for common old URLs
- Update robots.txt with crawl delay and sitemap entries
- Fix TypeScript errors in middleware and translations

--- a/src/i18n/ar.json
+++ b/src/i18n/ar.json
@@ -39,5 +39,16 @@
       }
     },
     "trust": "موثوق به من قبل رواد الأعمال والشركات الناشئة حول العالم"
+  },
+  "404": {
+    "meta": {
+      "title": "الصفحة غير موجودة - فيب لابز",
+      "description": "الصفحة التي تبحث عنها غير موجودة. يرجى التحقق من الرابط أو العودة إلى الصفحة الرئيسية."
+    },
+    "message": "عذراً! الصفحة التي تبحث عنها غير موجودة. يرجى التحقق من الرابط أو العودة إلى الصفحة الرئيسية.",
+    "buttons": {
+      "home": "الصفحة الرئيسية",
+      "contact": "اتصل بنا"
+    }
   }
 }
